--- a/Main Page.html
+++ b/Main Page.html
@@ -8,6 +8,24 @@
 </head>
 
 <body>
-	
+	<h1>Beatty Boyz Fitness</h1>
+	<h2>Weight Change and How it Works</h2>
+	<div>
+		<p>
+			Weight change in the human body depends on caloric intake. A calorie is a unit of energy used in nutrition when determining how much energy and nutritional value is in food. The human body uses calories to function using them for things like providing the engery for our vital organs to operate and providing energy to our muscles when we walk. Since the human body is constantly working and using calories there’s a base amount of calories the human body uses (or burns) to ensure our vital organs are functioning properly.<br/><br/>
+
+			An analogy one can use when discussing caloric intake and the human body is gasoline and a car. The major difference is when humans fill up their metaphorical “gas tank” the energy consumed after is stored within the body. These stored calories can then be used as a source of energy for the body in the future.<br/><br/>
+
+			Now that a basic understanding of calories and caloric intake is established one can decide if they would like to lose, maintain, or gain weight. To lose weight a person must consume less calories than their body needs to maintain its weight and vital body functions. This lowering in caloric consumption is called a caloric deficit. During a caloric deficit the body prioritizes using consumed calories for vital bodily functions and uses stored calories to run.<br/><br/> 
+		
+			If a person were to choose to maintain their current body weight then they would need to consume the amount of calories their body needs to ensure vital bodily functions operate while not forcing the body to tap into stored energy sources. This level of caloric intake is simply referred to as caloric maintenance.<br/><br/>
+		
+			Depending on a person’s goals when it comes to fitness they might want to increase their body weight. An increase in body weight is generally only possible if the person ensures they are eating above their maintenance caloric intake level. This increase in caloric intake is referred to as caloric surplus. In a caloric surplus the human body first prioritizes vital body functions, then stores the calories that are supplemental to the maintenance calories in the body. This storage could either be body fat or muscle.<br/><br/>
+
+			Below is a calculator to determine your caloric maintenance level:
+		</p>
+	</div>
+
+
 </body>
 </html>
