--- a/Main Page.html
+++ b/Main Page.html
@@ -24,6 +24,42 @@
 
 			Below is a calculator to determine your caloric maintenance level:
 		</p>
+		<p>
+		<label>Height?</label>
+		<input type="text" name="height" list="heights"/>
+		<datalist id="heights">
+			<option>4ft 7in</option>
+			<option>4ft 8in</option>
+			<option>4ft 9in</option> 
+			<option>4ft 10in</option>
+			<option>4ft 11in</option>
+			<option>5ft 0in</option>
+			<option>5ft 1in</option>
+			<option>5ft 2in</option>
+			<option>5ft 3in</option>
+			<option>5ft 4in</option>
+			<option>5ft 5in</option>
+			<option>5ft 6in</option>
+			<option>5ft 7in</option>
+			<option>5ft 8in</option>
+			<option>5ft 9in</option>
+			<option>5ft 10in</option>
+			<option>5ft 11in</option>
+			<option>6ift 0in</option>
+			<option>6ft 1in</option>
+			<option>6ft 2in</option>
+			<option>6ft 3in</option>
+			<option>6ft 4in</option>
+			<option>6ft 5in</option>
+			<option>6ft 6in</option>
+			<option>6ft 7in</option>
+			<option>6ft 8in</option>
+			<option>6ft 9in</option>
+			<option>6ft 10in</option>
+			<option>6ft 11in</option>
+			<option>7ft 0in</option>
+		</datalist> 
+	</p>
 	</div>
 
 
