--- a/Main Page.html
+++ b/Main Page.html
@@ -11,7 +11,7 @@
 	<h1>Beatty Boyz Fitness</h1>
 	<h2>Weight Change and How it Works</h2>
 	<div>
-		<p>
+		<p class="paragraph">
 			Weight change in the human body depends on caloric intake. A calorie is a unit of energy used in nutrition when determining how much energy and nutritional value is in food. The human body uses calories to function using them for things like providing the engery for our vital organs to operate and providing energy to our muscles when we walk. Since the human body is constantly working and using calories there’s a base amount of calories the human body uses (or burns) to ensure our vital organs are functioning properly.<br/><br/>
 
 			An analogy one can use when discussing caloric intake and the human body is gasoline and a car. The major difference is when humans fill up their metaphorical “gas tank” the energy consumed after is stored within the body. These stored calories can then be used as a source of energy for the body in the future.<br/><br/>
