--- a/Main Page.html
+++ b/Main Page.html
@@ -24,44 +24,84 @@
 
 			Below is a calculator to determine your caloric maintenance level:
 		</p>
-		<p>
-		<label>Height?</label>
-		<input type="text" name="height" list="heights"/>
-		<datalist id="heights">
-			<option>4ft 7in</option>
-			<option>4ft 8in</option>
-			<option>4ft 9in</option> 
-			<option>4ft 10in</option>
-			<option>4ft 11in</option>
-			<option>5ft 0in</option>
-			<option>5ft 1in</option>
-			<option>5ft 2in</option>
-			<option>5ft 3in</option>
-			<option>5ft 4in</option>
-			<option>5ft 5in</option>
-			<option>5ft 6in</option>
-			<option>5ft 7in</option>
-			<option>5ft 8in</option>
-			<option>5ft 9in</option>
-			<option>5ft 10in</option>
-			<option>5ft 11in</option>
-			<option>6ift 0in</option>
-			<option>6ft 1in</option>
-			<option>6ft 2in</option>
-			<option>6ft 3in</option>
-			<option>6ft 4in</option>
-			<option>6ft 5in</option>
-			<option>6ft 6in</option>
-			<option>6ft 7in</option>
-			<option>6ft 8in</option>
-			<option>6ft 9in</option>
-			<option>6ft 10in</option>
-			<option>6ft 11in</option>
-			<option>7ft 0in</option>
-		</datalist> 
-	</p>
 	</div>
 
+<form method="get" action="" id="mainForm">
+   <fieldset>
+         <tr>
+      <legend>Caloric Calculator</legend>
+      <table>
+         </tr> 
+         <tr>
+
+         	<td>
+               <p>
+               		<label>Age</label><br/>
+                  	<input type="text" name="Age" size="5"/>
+               </p>            
+            </td>
+
+            <td> 
+            	<p>
+            		<label>Gender</label><br/>
+                  	<input type="radio" name="gender" value="1">Male<br/>
+                  	<input type="radio" name="gender" value="2" checked>Female
+            	</p>
+            </td>
+            <td>
+               <p> 
+               <label>Height</label><br/>
+               <select name="height">
+                	<option>4ft 7in</option>
+					<option>4ft 8in</option>
+					<option>4ft 9in</option> 
+					<option>4ft 10in</option>
+					<option>4ft 11in</option>
+					<option>5ft 0in</option>
+					<option>5ft 1in</option>
+					<option>5ft 2in</option>
+					<option>5ft 3in</option>
+					<option>5ft 4in</option>
+					<option>5ft 5in</option>
+					<option>5ft 6in</option>
+					<option>5ft 7in</option>
+					<option>5ft 8in</option>
+					<option>5ft 9in</option>
+					<option>5ft 10in</option>
+					<option>5ft 11in</option>
+					<option>6ft 0in</option>
+					<option>6ft 1in</option>
+					<option>6ft 2in</option>
+					<option>6ft 3in</option>
+					<option>6ft 4in</option>
+					<option>6ft 5in</option>
+					<option>6ft 6in</option>
+					<option>6ft 7in</option>
+					<option>6ft 8in</option>
+					<option>6ft 9in</option>
+					<option>6ft 10in</option>
+					<option>6ft 11in</option>
+					<option>7ft 0in</option>
+               </select>
+               </p>
+            </td>
+            <td>
+               <p>	
+               <label>Weight</label><br/>               
+               <input type="text" name="weight" size="10"/>
+               </p>
+            </td>
+         </tr>
+         <tr>
+            <td colspan="2">
+               <div class="rectangle centered"> 
+                  <input type="submit" class="rounded"> <input type="reset" value="Clear Form" class="rounded">  
+               </div>
+            </td>
+         </tr>
+      </table>
+   </fieldset>
+</form>
 
 </body>
 </html>
