--- a/Main Page.html
+++ b/Main Page.html
@@ -37,13 +37,13 @@
          	<td>
                <p>
                		<label>Age</label><br/>
-                  	<input type="text" name="Age" size="5"/>
+                  	<input type="text" name="Age" size="3"/>
                </p>            
             </td>
 
             <td> 
             	<p>
-            		<label>Gender</label><br/>
+            		<label>Gender</label>
                   	<input type="radio" name="gender" value="1">Male
                   	<input type="radio" name="gender" value="2">Female
             	</p>
@@ -51,40 +51,40 @@
 
             <td>
                <p> 
-               <label>Height</label><br/>
-               <select name="height">
-                	<option>4ft 7in</option>
-					<option>4ft 8in</option>
-					<option>4ft 9in</option> 
-					<option>4ft 10in</option>
-					<option>4ft 11in</option>
-					<option>5ft 0in</option>
-					<option>5ft 1in</option>
-					<option>5ft 2in</option>
-					<option>5ft 3in</option>
-					<option>5ft 4in</option>
-					<option>5ft 5in</option>
-					<option>5ft 6in</option>
-					<option>5ft 7in</option>
-					<option>5ft 8in</option>
-					<option>5ft 9in</option>
-					<option>5ft 10in</option>
-					<option>5ft 11in</option>
-					<option>6ft 0in</option>
-					<option>6ft 1in</option>
-					<option>6ft 2in</option>
-					<option>6ft 3in</option>
-					<option>6ft 4in</option>
-					<option>6ft 5in</option>
-					<option>6ft 6in</option>
-					<option>6ft 7in</option>
-					<option>6ft 8in</option>
-					<option>6ft 9in</option>
-					<option>6ft 10in</option>
-					<option>6ft 11in</option>
-					<option>7ft 0in</option>
-               </select>
-               </p>
+               		<label>Height</label><br/>
+               		<select name="height">
+                		<option>4ft 7in</option>
+						<option>4ft 8in</option>
+						<option>4ft 9in</option> 
+						<option>4ft 10in</option>
+						<option>4ft 11in</option>
+						<option>5ft 0in</option>
+						<option>5ft 1in</option>
+						<option>5ft 2in</option>
+						<option>5ft 3in</option>
+						<option>5ft 4in</option>
+						<option>5ft 5in</option>
+						<option>5ft 6in</option>
+						<option>5ft 7in</option>
+						<option>5ft 8in</option>
+						<option>5ft 9in</option>
+						<option>5ft 10in</option>
+						<option>5ft 11in</option>
+						<option>6ft 0in</option>
+						<option>6ft 1in</option>
+						<option>6ft 2in</option>
+						<option>6ft 3in</option>
+						<option>6ft 4in</option>
+						<option>6ft 5in</option>
+						<option>6ft 6in</option>
+						<option>6ft 7in</option>
+						<option>6ft 8in</option>
+						<option>6ft 9in</option>
+						<option>6ft 10in</option>
+						<option>6ft 11in</option>
+						<option>7ft 0in</option>
+               		</select>
+              </p>
             </td>
 
             <td>
