--- a/Main Page.html
+++ b/Main Page.html
@@ -108,7 +108,7 @@
          </tr>
 
          <tr>
-            <td colspan="3">
+            <td class="submit" colspan="3">
                <div> 
                   <input type="Submit" class="rounded" onclick="return validateInputs()"> <input type="reset" value="Clear Form" class="rounded">  
                </div>
