--- a/Main Page.html
+++ b/Main Page.html
@@ -8,7 +8,18 @@
 </head>
 
 <body>
-	<h1>Beatty Boyz Fitness</h1>
+	<header>
+		<div class="main">
+			<div class="logo">
+				<img src="logo1.png">
+			</div>
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Gallery</a></li>
+				<li><a href="#">About Us</a></li>
+			</ul>
+		</div>
+	</header>
 	<h2>Weight Change and How it Works</h2>
 	<div>
 		<p class="paragraph">
