Added Validation for the Calc Form

--- a/Main Page.html
+++ b/Main Page.html
@@ -36,16 +36,16 @@
 
          	<td>
                <p>
-               		<label>Age</label><br/>
-                  	<input type="text" name="Age" size="3"/>
+               		<label id="labelage">Age</label><br/>
+                  	<input type="text" name="age" id="age" size="3"/>
                </p>            
             </td>
 
             <td> 
             	<p>
-            		<label>Gender</label><br/>
-                  	<input type="radio" name="gender" value="1">Male<br/>
-                  	<input type="radio" name="gender" value="2">Female
+            		<label id="labelgender">Gender</label><br/>
+                  	<input type="radio" name="gender" id="gMale" value="1">Male<br/>
+                  	<input type="radio" name="gender" id="gFemale" value="2">Female
             	</p>
             </td>
 
@@ -101,8 +101,8 @@
 
             <td>
                <p>	
-               <label>Weight</label><br/>               
-               <input type="text" name="weight" size="3"/>
+               <label id="labelweight">Weight</label><br/>               
+               <input type="text" name="weight" id="weight" size="3"/>
                </p>
             </td>
          </tr>
