--- a/Main Page.html
+++ b/Main Page.html
@@ -37,7 +37,7 @@
 		</p>
 	</div>
 <!-- Creates the form for the caloric intake calculator -->
-<form method="get" action="" id="calcForm">
+<form method="post" action="" id="calcForm">
    <fieldset>
          <tr>
       <legend>Caloric Calculator</legend>
