--- a/Calculator_Page.html
+++ b/Calculator_Page.html
@@ -42,12 +42,11 @@
 	<label class = "field">Male:</label> <input type="radio" id="gender" name="gender" value="1" class = "field"><br>
   	<label class = "field">Female:</label> <input type="radio" id="gender" name="gender" value="2" class = "field"><br>
 
-	<label class = "field">Age:</label><br>
-	<input type="number" id="age" value="20"><br>
+	<label class = "field">Age:</label> <input type="number" id="age"><br>
 
-	<label class = "field">Height:</label> <input type="number" id="height" value="180"><br>
+	<label class = "field">Height:</label> <input type="number" id="height"><br>
 	
-	<label class = "field">Weight:</label> <input type="number" id="weigth" value="80"><br>
+	<label class = "field">Weight:</label> <input type="number" id="weigth"><br>
 
 </form>
 <button type="button" onclick="" class="rounded">Calculate</button>
