--- a/landing/Landing.html
+++ b/landing/Landing.html
@@ -19,14 +19,16 @@
 				<li><a href="#">About Us</a></li>
 			</ul>
 		</div>
-		<div class="title">
-			<h1>WELCOME TO OUR FITNESS WEBPAGE</h1>
-			<h2>Let's get started</h2>
-		</div>
+		<div class ="div-container">
+			<div class="title">
+				<h1>WELCOME TO OUR FITNESS WEBPAGE</h1>
+				<h2>Let's get started</h2>
+			</div>
 
-		<div class="button">
-			<a href="#" class="btn">Caloric Calculator</a>
-			<a href="#" class="btn">Weekly Workout Routines</a>
+			<div class="button">
+				<a href="#" class="btn">Caloric Calculator</a>
+				<a href="#" class="btn">Weekly Workout Routines</a>
+			</div>
 		</div>
 	</header>
 	</header>
