--- a/Calculator_Page.html
+++ b/Calculator_Page.html
@@ -33,7 +33,7 @@
 		
 			Depending on a person’s goals when it comes to fitness they might want to increase their body weight. An increase in body weight is generally only possible if the person ensures they are eating above their maintenance caloric intake level. This increase in caloric intake is referred to as caloric surplus. In a caloric surplus the human body first prioritizes vital body functions, then stores the calories that are supplemental to the maintenance calories in the body. This storage could either be body fat or muscle.<br/><br/>
 
-			Below is a calculator to determine your caloric maintenance level:\
+			Below is a calculator to determine your caloric maintenance level:
 		</p>
 	</div>
 <!-- Creates the form for the caloric intake calculator -->
@@ -49,7 +49,7 @@
 	<label class = "field">Weight:</label> <input type="number" id="weigth"><br>
 
 </form>
-<button type="button" onclick="" class="rounded">Calculate</button>
-<p id="cals">Calories</p>
+<button type="button" onclick="" class="rounded" id="button">Calculate</button>
+<p class="field" id="cals">Calories</p>
 </body>
 </html>
