Fixed the calculator

--- a/Calculator_Page.html
+++ b/Calculator_Page.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness</title>
 	<link rel="stylesheet" href="css_file.css"/>
-	<script type="text/javascript" src="js_file.js"></script>
+	
 </head>
 
 <body>
@@ -37,7 +37,7 @@
 		</p>
 	</div>
 <!-- Creates the form for the caloric intake calculator -->
-<form action="" id="calcForm">
+<form action="#">
 
 	<label class = "field">Male:</label> <input type="radio" id="gender" name="gender" value="1" class = "field"><br>
   	<label class = "field">Female:</label> <input type="radio" id="gender" name="gender" value="2" class = "field"><br>
@@ -46,10 +46,15 @@
 
 	<label class = "field">Height:</label> <input type="number" id="height"><br>
 	
-	<label class = "field">Weight:</label> <input type="number" id="weigth"><br>
-
+	<label class = "field">Weight:</label> <input type="number" id="weight"><br>
+	
 </form>
-<button type="button" onclick="" class="rounded" id="button">Calculate</button>
+
+<button type="button" onclick="" class="rounded">Calculate</button>
 <p class="field" id="cals">Calories</p>
+
+<script type="text/javascript" src="js_file.js"></script>
+
 </body>
+
 </html>
