--- a/Calculator_Page.html
+++ b/Calculator_Page.html
@@ -37,7 +37,8 @@
 		</p>
 	</div>
 <!-- Creates the form for the caloric intake calculator -->
-<form action="#">
+<form class="calc" action="#">
+	<div class="table">
 
 	<label class = "field">Male:</label> <input type="radio" id="gender" name="gender" value="1" class = "field"><br>
   	<label class = "field">Female:</label> <input type="radio" id="gender" name="gender" value="2" class = "field"><br>
@@ -48,12 +49,14 @@
 	
 	<label class = "field">Weight:</label> <input type="number" id="weight"><br>
 	
-</form>
+
 
 <button type="button" onclick="" class="rounded">Calculate</button>
 <p class="field" id="cals">Calories</p>
 
 <script type="text/javascript" src="js_file.js"></script>
+</div>
+</form>
 
 </body>
 
