--- a/Landing.html
+++ b/Landing.html
@@ -25,7 +25,7 @@
 		</div>
 
 		<div class="button">
-			<a href="#" class="btn">Caloric Calculator</a>
+			<a href="C:/Users/E/Documents/GitHub/BeattyBoyz/Calculator_Page.html" class="btn">Caloric Calculator</a>
 			<a href="#" class="btn">Weekly Workout Routines</a>
 		</div>
 	</header>
