--- a/Calculator_Page.html
+++ b/Calculator_Page.html
@@ -1,5 +1,4 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE HTML><html>
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness</title>
@@ -39,19 +38,33 @@
 <!-- Creates the form for the caloric intake calculator -->
 <form action="#">
 
-	<label class = "field">Male:</label> <input type="radio" id="gender" name="gender" value="1" class = "field"><br>
-  	<label class = "field">Female:</label> <input type="radio" id="gender" name="gender" value="2" class = "field"><br>
+	<label class = "field">Male:</label> 
+	<input type="radio" name="gender" value="1" id="genderM" class = "field"><br>
+
+  	<label class = "field">Female:</label> 
+  	<input type="radio" name="gender" value="2" id="genderF"class = "field"><br>
 
 	<label class = "field">Age:</label> <input type="number" id="age"><br>
 
 	<label class = "field">Height:</label> <input type="number" id="height"><br>
 	
 	<label class = "field">Weight:</label> <input type="number" id="weight"><br>
+
+	<label class = "field">Activity Level:</label> 
+	<select name = "activity" id="activity">
+		<option>Choose Activity Level</option>
+		<option>Sedentary</option>
+		<option>Moderate</option>
+		<option>Intense</option>
+		<option>Athlete</option>
+	</select>
 	
 </form>
 
 <button type="button" onclick="" class="rounded">Calculate</button>
-<p class="field" id="cals">Calories</p>
+<p class="field" id="cals">Maintenance Calories: </p> <p class="field" id="cals">Calories</p><br><br>
+
+<p class="field"></p>
 
 <script type="text/javascript" src="js_file.js"></script>
 
