--- a/landing/Landing.html
+++ b/landing/Landing.html
@@ -3,7 +3,7 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness</title>
-	<link rel="stylesheet" href="css_file.css"/>
+	<link rel="stylesheet" href="css_landing.css"/>
 	<script type="text/javascript" src="js_file.js"></script>
 </head>
 
@@ -15,7 +15,6 @@
 			</div>
 			<ul>
 				<li class="active"><a href="#">Home</a></li>
-				<li><a href="#">Gallery</a></li>
 				<li><a href="#">About Us</a></li>
 			</ul>
 		</div>
