--- a/Calculator_Page.html
+++ b/Calculator_Page.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
 	<meta charset="utf-8">
-	<title>Beatty Boyz Fitness</title>
+	<title>Caloric Calculator</title>
 	<link rel="stylesheet" href="css_file.css"/>
 	
 </head>
@@ -15,12 +15,11 @@
 			</div>
 			<ul>
 				<li><a href="#">Home</a></li>
-				<li><a href="#">Gallery</a></li>
 				<li><a href="#">About Us</a></li>
 			</ul>
 		</div>
 	</header>
-	<h2>Weight Change and How it Works</h2>
+	<h1>Weight Change and How it Works</h1>
 	<div>
 		<p class="paragraph">
 			Weight change in the human body depends on caloric intake. A calorie is a unit of energy used in nutrition when determining how much energy and nutritional value is in food. The human body uses calories to function using them for things like providing the engery for our vital organs to operate and providing energy to our muscles when we walk. Since the human body is constantly working and using calories there’s a base amount of calories the human body uses (or burns) to ensure our vital organs are functioning properly.<br/><br/>
