--- a/Calculator_Page.html
+++ b/Calculator_Page.html
@@ -38,20 +38,13 @@
 <!-- Creates the form for the caloric intake calculator -->
 <form id="calcForm" action="#">
 	<div class="table">
-<<<<<<< HEAD
+
 	<!-- Makes radio button to allow user to choose their gender. Defaults to male. -->
 	<label class = "field">Male:</label> 
-	<input type="radio" name="gender" value="1" id="genderM" class = "field" checked\><br>
+	<input type="radio" name="gender" value="1" id="genderM" class = "field" checked><br>
   	<label class = "field">Female:</label> 
-=======
-
-	<label>Male</label> 
-	<input type="radio" name="gender" value="1" id="genderM" class = "field"><br>
-
-  	<label>Female</label> 
->>>>>>> 7f1bd87d4ceb0fd599648f1b2ef67ba5b70322f4
-  	<input type="radio" name="gender" value="2" id="genderF"class = "field"><br>
-
+  	<input type="radio" name="gender" value="1" id="genderM" class = "field" checked><br>
+  	
   	<!-- Accepts the users age, height, and weight -->
 	<label class = "field">Age:</label> <input type="number" id="age"><br>
 	<label class = "field">Height in cm:</label> <input type="number" id="height"><br>
@@ -66,6 +59,7 @@
 		<option>Intense</option>
 		<option>Athlete</option>
 	</select>
+
 <!-- Creates the button that allows to submit their information -->	
 <button type="button" onclick="" class="rounded">Calculate</button>
 
