--- a/Routines.html
+++ b/Routines.html
@@ -3,7 +3,7 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness</title>
-	<link rel="stylesheet" href="css_landing.css"/>
+	<link rel="stylesheet" href="css_file.css"/>
 </head>
 
 <body>
@@ -19,6 +19,7 @@
 		</div>
 	</header>
 
-	
+	<h1>Choose Your Split</h1><br>
+	<p class="paragraph">Feel free to choose between our 3 day, 4 day, or 6 day workout routine splits</p>
 </body>
 </html>
