--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness</title>
 	<link rel="stylesheet" href="css_landing.css"/>
-	<script type="text/javascript" src="js_file.js"></script>
 </head>
 
 <body>
@@ -14,25 +13,20 @@
 				<img src="logo1.png">
 			</div>
 			<ul>
-				<li class="active"><a href="#">Home</a></li>
+				<li class="active"><a href="C:/Users/E/Documents/GitHub/BeattyBoyz/Landing.html">Home</a></li>
 				<li><a href="#">About Us</a></li>
 			</ul>
 		</div>
-		<div class ="div-container">
-			<div class="title">
-				<h1>WELCOME TO OUR FITNESS WEBPAGE</h1>
-				<h2>Let's get started</h2>
-			</div>
+		<div class="title">
+			<h1>WELCOME TO OUR FITNESS WEBPAGE</h1>
+			<h2>Let's get started</h2>
+		</div>
 
-			<div class="button">
-				<a href="#" class="btn">Caloric Calculator</a>
-				<a href="#" class="btn">Weekly Workout Routines</a>
-			</div>
+		<div class="button">
+			<a href="C:/Users/E/Documents/GitHub/BeattyBoyz/Calculator_Page.html" class="btn">Caloric Calculator</a>
+			<a href="C:/Users/E/Documents/GitHub/BeattyBoyz/Routines.html" class="btn">Weekly Workout Routines</a>
 		</div>
 	</header>
 	</header>
-	
-	
-
 </body>
 </html>
