--- a/Calculator_Page.html
+++ b/Calculator_Page.html
@@ -36,6 +36,7 @@
 		</p>
 	</div>
 <!-- Creates the form for the caloric intake calculator -->
+<div class="calc">
 <form id="calcForm" action="#">
 	<div class="table">
 
@@ -70,6 +71,7 @@
 
 <!-- Initiates calculation script -->
 <script type="text/javascript" src="js_file.js"></script>
+</div>
 </div>
 </form>
 
