Deleted Gallery and added 3 Day Split

--- a/Routines.html
+++ b/Routines.html
@@ -20,6 +20,128 @@
 	</header>
 
 	<h1>Choose Your Split</h1><br>
-	<p class="paragraph">Feel free to choose between our 3 day, 4 day, or 6 day workout routine splits</p>
+	<h2 class="paragraph">Feel free to choose between our 3 day, 4 day, or 6 day workout routine splits</h2>
+
+	<p class="paragraph">3-Day Split</p>
+	<table>
+		<tr>
+			<th>Monday</th>
+			<th>Tuesday</th>
+			<th>Wednesday</th>
+			<th>Thursday</th>
+			<th>Friday</th>
+			<th>Saturday</th>
+			<th>Sunday</th>
+		</tr>
+		<tr>
+			<td>Squat</td>
+			<td>Rest</td>
+			<td>Squat</td>
+			<td>Rest</td>
+			<td>Squat</td>
+			<td>Rest</td>
+			<td>Rest</td>
+		</tr>
+		<tr>
+			<td>Deadlift</td>
+			<td>Rest</td>
+			<td>Deadlift</td>
+			<td>Rest</td>
+			<td>Deadlift</td>
+			<td>Rest</td>
+			<td>Rest</td>
+		</tr>
+
+		<tr>
+			<td>Standing Calf Raise</td>
+			<td>Rest</td>
+			<td>Standing Calf Raise</td>
+			<td>Rest</td>
+			<td>Standing Calf Raise</td>
+			<td>Rest</td>
+			<td>Rest</td>
+		</tr>
+
+		<tr>
+			<td>Bench Press</td>
+			<td>Rest</td>
+			<td>Bench Press</td>
+			<td>Rest</td>
+			<td>Bench Press</td>
+			<td>Rest</td>
+			<td>Rest</td>
+		</tr>
+
+		<tr>
+			<td>Pull Ups</td>
+			<td>Rest</td>
+			<td>Pull Ups</td>
+			<td>Rest</td>
+			<td>Pull Ups</td>
+			<td>Rest</td>
+			<td>Rest</td>
+		</tr>
+
+		<tr>
+			<td>Overhead Press</td>
+			<td>Rest</td>
+			<td>Overhead Press</td>
+			<td>Rest</td>
+			<td>Overhead Press</td>
+			<td>Rest</td>
+			<td>Rest</td>
+		</tr>
+
+		<tr>
+			<td>Cable Rows</td>
+			<td>Rest</td>
+			<td>Cable Rows</td>
+			<td>Rest</td>
+			<td>Cable Rows</td>
+			<td>Rest</td>
+			<td>Rest</td>
+		</tr>
+
+		<tr>
+			<td>Dumbbell Curls</td>
+			<td>Rest</td>
+			<td>Dumbbell Curls</td>
+			<td>Rest</td>
+			<td>Dumbbell Curls</td>
+			<td>Rest</td>
+			<td>Rest</td>
+		</tr>
+
+		<tr>
+			<td>Cable Tricep Extension</td>
+			<td>Rest</td>
+			<td>Cable Tricep Extension</td>
+			<td>Rest</td>
+			<td>Cable Tricep Extension</td>
+			<td>Rest</td>
+			<td>Rest</td>
+		</tr>
+
+		<tr>
+			<td>Dumbbell Lateral Raises</td>
+			<td>Rest</td>
+			<td>Dumbbell Lateral Raises</td>
+			<td>Rest</td>
+			<td>Dumbbell Lateral Raises</td>
+			<td>Rest</td>
+			<td>Rest</td>
+		</tr>
+
+		<tr>
+			<td>*Ab Workout of Your Choosing*</td>
+			<td>Rest</td>
+			<td>*Ab Workout of Your Choosing*</td>
+			<td>Rest</td>
+			<td>*Ab Workout of Your Choosing*</td>
+			<td>Rest</td>
+			<td>Rest</td>
+		</tr>
+	</table>
+
 </body>
 </html>
