Adjusted HTML Links

--- a/Calculator_Page.html
+++ b/Calculator_Page.html
@@ -46,7 +46,7 @@
 	<label class = "field">Male:</label> 
 	<input type="radio" name="gender" value="1" id="genderM" class = "field" checked><br>
   	<label class = "field">Female:</label> 
-  	<input type="radio" name="gender" value="1" id="genderM" class = "field" checked><br>
+  	<input type="radio" name="gender" value="1" id="genderM" class = "field"><br>
   	
   	<!-- Accepts the users age, height, and weight -->
 	<label class = "field">Age:</label> <input type="number" id="age"><br>
