--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</div>
 
 		<div class="button">
-			<a href="C:\Users\Duke\Documents\GitHub\BeattyBoyz\Calculator_Page.html" class="btn">Caloric Calculator</a>
+			<a href="BeattyBoyz/Calculator_Page.html" class="btn">Caloric Calculator</a>
 			<a href="C:/Users/E/Documents/GitHub/BeattyBoyz/Routines.html" class="btn">Weekly Workout Routines</a>
 		</div>
 	</header>
