--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 		<div class="button">
 			<a href="Calculator_Page.html" class="btn">Caloric Calculator</a>
-			<a href="C:/Users/E/Documents/GitHub/BeattyBoyz/Routines.html" class="btn">Weekly Workout Routines</a>
+			<a href="Routines.html" class="btn">Weekly Workout Routines</a>
 		</div>
 	</header>
 	</header>
