--- a/Calculator_Page.html
+++ b/Calculator_Page.html
@@ -13,7 +13,7 @@
 				<img src="logo1.png">
 			</div>
 			<ul>
-				<li><a href="C:/Users/E/Documents/GitHub/BeattyBoyz/Landing.html">Home</a></li>
+				<li><a href="C:/Users/E/Documents/GitHub/BeattyBoyz/index.html">Home</a></li>
 				<li><a href="#">About Us</a></li>
 			</ul>
 		</div>
@@ -33,7 +33,7 @@
 		
 			Depending on a person’s goals when it comes to fitness they might want to increase their body weight. An increase in<br/> body weight is generally only possible if the person ensures they are eating above their maintenance caloric intake level.<br/> This increase in caloric intake is referred to as caloric surplus. In a caloric surplus the human body first prioritizes vital body<br/> functions, then stores the calories that are supplemental to the maintenance calories in the body.<br/> This storage could either be body fat or muscle.<br/><br/>
 
-			Below is a calculator to determine your caloric maintenance level:
+			Here is a calculator to determine your caloric maintenance level:
 		</p>
 	</div>
 	</div>
