--- a/AboutUS.html
+++ b/AboutUS.html
@@ -3,7 +3,7 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Introducing the Beatty Boyz  </title>
-	<link rel="stylesheet" href="intro-css.css"/>
+	<link rel="stylesheet" href="css_landing.css">
 	<script type="text/javascript" src=".jpeg"></script>
 </head>
 
