Edited the About Us Page

--- a/AboutUS.html
+++ b/AboutUS.html
@@ -2,53 +2,54 @@
 <html>
 <head lang="en">
 	<meta charset="utf-8">
-	<title>Introducing the Beatty Boyz  </title>
+	<title>About Us</title>
 	<link rel="stylesheet" href="css_landing.css">
-	<script type="text/javascript" src=".jpeg"></script>
 </head>
 
 <body>
 	<header>
+		<div class="main">
+			<div class="logo">
+				<img src="logo1.png">
 			</div>
 			<ul>
-				<li><a href="C:/Users/E/Documents/GitHub/BeattyBoyz/index.html">Home</a></li>
-				<li><a href="#">About Us</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li class="active"><a href="AboutUS.html">About Us</a></li>
 			</ul>
 		</div>
 	</header>
+
 	<h1>About Us</h1>
-		<h2>Introducing the Team <h2>
-		
-		<p> Emmanuel Valenzuela </p>
-		<img src="img/iplaypubg.png"
+	<h2>Introducing the Team <h2><br><br>
 
+	<p> Emmanuel Valenzuela </p>
+	<img src="img/manny.png" style="width:200px;height:300px;">
 	<div>
-		<p> Emmanuel Valenzuela or often refered to as "Manny" is a Senior majoring in Computer Networking, previously interning as a System Administrator. Emmanueal spearheaded the Beatty Boyz project idea and brought together like minds to envision, develope, and deploy our final project. Manny worked heavily and extensivley on the developement of our Java Script.
+		<p>Emmanuel or "Manny" is a Senior majoring in Computer Networking and minoring in Computer Science at Wentworth Institute of Technology. Emmanueal spearheaded the Beatty Boyz project idea and brought together like minded indivuals to envision, develope, and deploy our final project. Emmanuel supplied his nutritional and physical training knowledge for the project while developing the Javascript and HTML.<br><br>
 		</p>
 	</div>
 
-		<p> Brian Robles  </p>
-		<img src="img/marrymelogic.png"
 
+	<p> Brian Robles </p>
+	<img src="img/brian.png" style="width:200px;height:300px;">
 	<div>
-		<p> Brian Robles is a Senior majoring in Computer Networking, previously interning as a Systems Engineer. Brian is currently the student representitive for the Information Security Department here at Wentworth. Brian played a major role in the deleopment of this project by working hand in hand with Estiben Ventura to provide excelent CSS for our webpage.
+		<p>Brian is a Senior majoring in Computer Networking and minoring in Computer Science at Wentworth Institute of Technology. Brian played a pivotal role in the Beatty Boyz project through his interest in design. Through his experience in design Brian lead the design of the project and worked alongside Estiben in the development of the CSS styling.<br><br>
 		</p>
 	</div>
 
-	<p> Estiben Ventura  </p>
-		<img src="img/lowkeysus.png"
 
+	<p> Estiben Ventura </p>
+	<img src="img/estiben.png" style="width:200px;height:300px;">
 	<div>
-		<p> Etsiben Ventura is a Senior majoring in Computer Networking, previously intering as a Information Security Engineer. Estiben played a major role by working in sync with Brian Robles in providing both CSS and handleing our website issues.
+		<p>Estiben is a Senior majoring in Computer Networking and minoring in Computer Science at Wentworth Institute of Technology. Estiben played an important role by using his creativity to assist Brian in designing the project and developing a large portion of the CSS styling. Estiben also worked on getting the website up and running on our own domain.<br><br>
 		</p>
 	</div>
 
-	<p> Edmund Wright  </p>
-		<img src="img/lowkeysus.png"
 
+	<p> Edmund Wright </p>
+	<img src="img/edmund.png" style="width:200px;height:300px;">
 	<div>
-		<p> Edmund Wright is a Senior majoring in Computer Networking, previously intering as both a Technical Support Enginner & Systems Engineer. Edmund played a lowkey role by working on the HTML with Emmanuel while desprately trying to play animal crossing.
-		</p>
+		<p> Edmund is a Senior majoring in Computer Networking at Wentworth Institute of Technology. Edmund played a major role in the project by assisting in the CSS and developing a portion of the HTML.</p>
 	</div>
 
 	<h3>Introducing the Topic <h3>
