--- a/Calculator_Page.html
+++ b/Calculator_Page.html
@@ -13,8 +13,8 @@
 				<img src="logo1.png">
 			</div>
 			<ul>
-				<li><a href="C:/Users/E/Documents/GitHub/BeattyBoyz/index.html">Home</a></li>
-				<li><a href="#">About Us</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="AboutUS.html">About Us</a></li>
 			</ul>
 		</div>
 	</header>
