--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness</title>
 	<link rel="stylesheet" href="css_landing.css"/>
+	<script type="text/javascript" src="js_file.js"></script>
 </head>
 
 <body>
@@ -13,20 +14,25 @@
 				<img src="logo1.png">
 			</div>
 			<ul>
-				<li class="active"><a href="index.html">Home</a></li>
-				<li><a href="AboutUS.html">About Us</a></li>
+				<li class="active"><a href="#">Home</a></li>
+				<li><a href="#">About Us</a></li>
 			</ul>
 		</div>
-		<div class="title">
-			<h1>WELCOME TO OUR FITNESS WEBPAGE</h1>
-			<h2>Let's get started</h2>
-		</div>
+		<div class ="div-container">
+			<div class="title">
+				<h1>WELCOME TO OUR FITNESS WEBPAGE</h1>
+				<h2>Let's get started</h2>
+			</div>
 
-		<div class="button">
-			<a href="Calculator_Page.html" class="btn">Caloric Calculator</a>
-			<a href="Routines.html" class="btn">Weekly Workout Routines</a>
+			<div class="button">
+				<a href="#" class="btn">Caloric Calculator</a>
+				<a href="#" class="btn">Weekly Workout Routines</a>
+			</div>
 		</div>
 	</header>
 	</header>
+	
+	
+
 </body>
 </html>
