--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 				<img src="logo1.png">
 			</div>
 			<ul>
-				<li class="active"><a href="#">Home</a></li>
-				<li><a href="#">About Us</a></li>
+				<li class="active"><a href="index.html">Home</a></li>
+				<li><a href="AboutUS.html">About Us</a></li>
 			</ul>
 		</div>
 		<div class ="div-container">
@@ -25,8 +25,8 @@
 			</div>
 
 			<div class="button">
-				<a href="#" class="btn">Caloric Calculator</a>
-				<a href="#" class="btn">Weekly Workout Routines</a>
+				<a href="Calculator.Page.html" class="btn">Caloric Calculator</a>
+				<a href="Routines.html" class="btn">Weekly Workout Routines</a>
 			</div>
 		</div>
 	</header>
