--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</div>
 
 			<div class="button">
-				<a href="Calculator.Page.html" class="btn">Caloric Calculator</a>
+				<a href="Calculator_Page.html" class="btn">Caloric Calculator</a>
 				<a href="Routines.html" class="btn">Weekly Workout Routines</a>
 			</div>
 		</div>
