Working on About Us

--- a/AboutUS.html
+++ b/AboutUS.html
@@ -3,7 +3,7 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>About Us</title>
-	<link rel="stylesheet" href="css_landing.css">
+	<link rel="stylesheet" href="#">
 </head>
 
 <body>
@@ -19,8 +19,14 @@
 		</div>
 	</header>
 
-	<h1>About Us</h1>
-	<h2>Introducing the Team <h2><br><br>
+	<h1>About Us</h1><br>
+	<h2>Introducing the Topic <h2>
+		<div>
+		<p class="paragraph">
+			The Beatty Boyz is a group comprised of the hardest niggas you could ever find from Lynn & Haverhill, MA. We are a group of Four Computer Networking Seniors that are all interested in learning more about achieveing different health goals. In sharing a common goal, but living different life styles, we have produced a webpage that provide the individual with their required matainence calories varying on specifiy information supplied by the users. 
+		</div><br>
+
+	<h2>Introducing the Team <h2>
 
 	<p> Emmanuel Valenzuela </p>
 	<img src="img/manny.png" style="width:200px;height:300px;">
@@ -51,13 +57,6 @@
 	<div>
 		<p> Edmund is a Senior majoring in Computer Networking at Wentworth Institute of Technology. Edmund played a major role in the project by assisting in the CSS and developing a portion of the HTML.</p>
 	</div>
-
-	<h3>Introducing the Topic <h3>
-		<div>
-		<p class="paragraph">
-			The Beatty Boyz is a group comprised of the hardest niggas you could ever find from Lynn & Haverhill, MA. We are a group of Four Computer Networking Seniors that are all interested in learning more about achieveing different health goals. In sharing a common goal, but living different life styles, we have produced a webpage that provide the individual with their required matainence calories varying on specifiy information supplied by the users. 
-		</div>
-
 
 </body>
 
