--- a/AboutUS.html
+++ b/AboutUS.html
@@ -23,9 +23,9 @@
 	<h2>Introducing the Topic <h2>
 		<div>
 		<p class="paragraph">
-			The Beatty Boyz is a group comprised of the hardest niggas you could ever find. No one has slung this much cock at the prime ages of 21 & 22. As it turns out putting together this much real nigga energy produces some of the most fuckwithable shit you've ever seen in your life. Welcome to fitness baby, lets get some pussy.
+			*Insert intro to the idea and our goal*
 		</p>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/8BNP126zgPU" frameborder="0" allowfullscreen></iframe>
+		
 		</div><br>
 
 	<h2>Introducing the Team <h2>
