--- a/html/about_us.html
+++ b/html/about_us.html
@@ -10,11 +10,11 @@
 	<header>
 		<div class="main">
 			<div class="logo">
-				<img src="logo1.png">
+				<img src="../img/logo1.png">
 			</div>
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li class="active"><a href="AboutUS.html">About Us</a></li>
+				<li class="active"><a href="about_us.html">About Us</a></li>
 			</ul>
 		</div>
 	</header>
