--- a/html/calculator.html
+++ b/html/calculator.html
@@ -2,7 +2,7 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Caloric Calculator</title>
-	<link rel="stylesheet" href="css_file.css"/>
+	<link rel="stylesheet" href="../css/css_calculator.css"/>
 	
 </head>
 
@@ -10,11 +10,11 @@
 	<header>
 		<div class="main">
 			<div class="logo">
-				<img src="logo1.png">
+				<img src="../img/logo1.png">
 			</div>
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="AboutUS.html">About Us</a></li>
+				<li><a href="about_us.html">About Us</a></li>
 			</ul>
 		</div>
 	</header>
