--- a/html/routines.html
+++ b/html/routines.html
@@ -3,18 +3,18 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness</title>
-	<link rel="stylesheet" href="css_file.css"/>
+	<link rel="stylesheet" href="#"/>
 </head>
 
 <body>
 	<header>
 		<div class="main">
 			<div class="logo">
-				<img src="logo1.png">
+				<img src="../img/logo1.png">
 			</div>
 			<ul>
-				<li class="active"><a href="index.html">Home</a></li>
-				<li><a href="AboutUS.html">About Us</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about_us.html">About Us</a></li>
 			</ul>
 		</div>
 	</header>
