--- a/html/routines.html
+++ b/html/routines.html
@@ -13,7 +13,7 @@
 				<img src="../img/logo1.png">
 			</div>
 			<ul>
-				<li><a href="index.html">Home</a></li>
+				<li><a href="../index.html">Home</a></li>
 				<li><a href="about_us.html">About Us</a></li>
 			</ul>
 		</div>
