--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness</title>
-	<link rel="stylesheet" href="../css/css_index.css"/>
+	<link rel="stylesheet" href="css/css_index.css"/>
 </head>
 
 <body>
 	<header>
 		<div class="main">
 			<div class="logo">
-				<img src="../img/logo1.png">
+				<img src="img/logo1.png">
 			</div>
 			<ul>
 				<li class="active"><a href="index.html">Home</a></li>
-				<li><a href="about_us.html">About Us</a></li>
+				<li><a href="html/about_us.html">About Us</a></li>
 			</ul>
 		</div>
 		<div class ="div-container">
@@ -24,8 +24,8 @@
 			</div>
 
 			<div class="button">
-				<a href="calculator.html" class="btn">Caloric Calculator</a>
-				<a href="routines.html" class="btn">Weekly Workout Routines</a>
+				<a href="html/calculator.html" class="btn">Caloric Calculator</a>
+				<a href="html/routines.html" class="btn">Weekly Workout Routines</a>
 			</div>
 		</div>
 	</header>
