Fixed the js pathing in calc

--- a/html/calculator.html
+++ b/html/calculator.html
@@ -77,7 +77,7 @@
 <p class="field">Bulking Calories: </p> <p class="field" id="bulkingCals"></p><br>
 
 <!-- Initiates calculation script -->
-<script type="text/javascript" src="js_file.js"></script>
+<script type="text/javascript" src="../js/js_file.js"></script>
 	</div>
 	</div>
 	</form>
