--- a/html/about_us.html
+++ b/html/about_us.html
@@ -31,7 +31,7 @@
 	<h2>Introducing the Team <h2>
 
 	<p> Emmanuel Valenzuela </p>
-	<img src="./img/manny.png" style="width:200px;height:300px;">
+	<img src="../img/manny.png" style="width:200px;height:300px;">
 	<div>
 		<p>Emmanuel or "Manny" is a Senior majoring in Computer Networking and minoring in Computer Science at Wentworth Institute of Technology. Emmanueal spearheaded the Beatty Boyz project idea and brought together like minded indivuals to envision, develope, and deploy our final project. Emmanuel supplied his nutritional and physical training knowledge for the project while developing the Javascript and HTML.<br><br>
 		</p>
@@ -39,7 +39,7 @@
 
 
 	<p> Brian Robles </p>
-	<img src="./img/brian.png" style="width:200px;height:300px;">
+	<img src="../img/brian.png" style="width:200px;height:300px;">
 	<div>
 		<p>Brian is a Senior majoring in Computer Networking and minoring in Computer Science at Wentworth Institute of Technology. Brian played a pivotal role in the Beatty Boyz project through his interest in design. Through his experience in design Brian lead the design of the project and worked alongside Estiben in the development of the CSS styling.<br><br>
 		</p>
@@ -47,7 +47,7 @@
 
 
 	<p> Estiben Ventura </p>
-	<img src="./img/estiben.png" style="width:200px;height:300px;">
+	<img src="../img/estiben.png" style="width:200px;height:300px;">
 	<div>
 		<p>Estiben is a Senior majoring in Computer Networking and minoring in Computer Science at Wentworth Institute of Technology. Estiben played an important role by using his creativity to assist Brian in designing the project and developing a large portion of the CSS styling. Estiben also worked on getting the website up and running on our own domain.<br><br>
 		</p>
@@ -55,7 +55,7 @@
 
 
 	<p> Edmund Wright </p>
-	<img src="img/edmund.png" style="width:200px;height:300px;">
+	<img src="../img/edmund.png" style="width:200px;height:300px;">
 	<div>
 		<p> Edmund is a Senior majoring in Computer Networking at Wentworth Institute of Technology. Edmund played a major role in the project by assisting in the CSS and developing a portion of the HTML.</p>
 	</div>
