--- a/html/routines.html
+++ b/html/routines.html
@@ -3,7 +3,7 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness</title>
-	<link rel="stylesheet" href="#"/>
+	<link rel="stylesheet" href="../css/css_routine.css"/>>
 </head>
 
 <body>
@@ -23,7 +23,8 @@
 	<h2 class="paragraph">Feel free to choose between our 3 day, 4 day, or 6 day workout routine splits</h2>
 
 	<p class="paragraph">3-Day Split</p>
-	<table>
+	<table class="content">
+		<thead>
 		<tr>
 			<th>Monday</th>
 			<th>Tuesday</th>
@@ -33,6 +34,8 @@
 			<th>Saturday</th>
 			<th>Sunday</th>
 		</tr>
+		</thead>
+		<tbody>
 		<tr>
 			<td>Squat</td>
 			<td>Rest</td>
@@ -141,168 +144,8 @@
 			<td>Rest</td>
 			<td>Rest</td>
 		</tr>
-	</table>
-
-			<p class="paragraph">4-Day Split</p>
-	<table>
-		<tr>
-			<th>Monday</th>
-			<th>Tuesday</th>
-			<th>Wednesday</th>
-			<th>Thursday</th>
-			<th>Friday</th>
-			<th>Saturday</th>
-			<th>Sunday</th>
-		</tr>
-		<tr>
-			<td>Bench Press</td>
-			<td>Squat</td>
-			<td>Rest</td>
-			<td>Bench Press</td>
-			<td>Squat</td>
-			<td>Rest</td>
-			<td>Rest</td>
-		</tr>
-		<tr>
-			<td>Pull Ups</td>
-			<td>Deadlift</td>
-			<td>Rest</td>
-			<td>Pull Ups</td>
-			<td>Deadlift</td>
-			<td>Rest</td>
-			<td>Rest</td>
-		</tr>
-
-		<tr>
-			<td>Overhead Press</td>
-			<td>Seated Leg Extension</td>
-			<td>Rest</td>
-			<td>Overhead Press</td>
-			<td>Seated Leg Extension</td>
-			<td>Rest</td>
-			<td>Rest</td>
-		</tr>
-
-		<tr>
-			<td>Cable Rows</td>
-			<td>Seated Leg Curls</td>
-			<td>Rest</td>
-			<td>Cable Rows</td>
-			<td>Seated Leg Curls</td>
-			<td>Rest</td>
-			<td>Rest</td>
-		</tr>
-
-		<tr>
-			<td>Dumbbell Curls</td>
-			<td>Standing Calf Raise</td>
-			<td>Rest</td>
-			<td>Dumbbell Curls</td>
-			<td>Standing Calf Raise</td>
-			<td>Rest</td>
-			<td>Rest</td>
-		</tr>
-
-		<tr>
-			<td>Cable Tricep Extension</td>
-			<td>Seated Calf Raise</td>
-			<td>Rest</td>
-			<td>Cable Tricep Extension</td>
-			<td>Seated Calf Raise</td>
-			<td>Rest</td>
-			<td>Rest</td>
-		</tr>
-
-		<tr>
-			<td>*Ab workout of Your Choosing*</td>
-			<td>*Ab workout of Your Choosing*</td>
-			<td>Rest</td>
-			<td>*Ab workout of Your Choosing*</td>
-			<td>*Ab workout of Your Choosing*</td>
-			<td>Rest</td>
-			<td>Rest</td>
-		</tr>
-	</table>
-
-	<p class="paragraph">6-Day Split</p>
-	<table>
-		<tr>
-			<th>Monday</th>
-			<th>Tuesday</th>
-			<th>Wednesday</th>
-			<th>Thursday</th>
-			<th>Friday</th>
-			<th>Saturday</th>
-			<th>Sunday</th>
-		</tr>
-		<tr>
-			<td>Squat</td>
-			<td>Bench Press</td>
-			<td>Pull Ups</td>
-			<td>Squat</td>
-			<td>Bench Press</td>
-			<td>Pull Ups</td>
-			<td>*Ab Workout of Your Choosing*</td>
-		</tr>
-		<tr>
-			<td>Deadlift</td>
-			<td>Dumbbell Lateral Raise</td>
-			<td>Seated Cable Row</td>
-			<td>Deadlift</td>
-			<td>Dumbbell Lateral Raise</td>
-			<td>Seated Cable Row</td>
-			<td>Rest</td>
-		</tr>
-
-		<tr>
-			<td>Seated Leg Extension</td>
-			<td>Overhead Press</td>
-			<td>Barbell Shrugs</td>
-			<td>Seated Leg Extension </td>
-			<td>Overhead Press</td>
-			<td>Barbell Shrugs</td>
-			<td>Rest</td>
-		</tr>
-
-		<tr>
-			<td>Seated Leg Curls</td>
-			<td>Cable Tricep Pushdown</td>
-			<td>BLat Pulldowns</td>
-			<td>Seated Leg Curls</td>
-			<td>Cable Tricep Pushdown</td>
-			<td>Lat Pulldowns</td>
-			<td>Rest</td>
-		</tr>
-
-		<tr>
-			<td>Standing Calf Raise</td>
-			<td>Incline Bench Press</td>
-			<td>Pendlay Row</td>
-			<td>Standing Calf Raise</td>
-			<td>Incline Bench Press</td>
-			<td>Pendlay Row</td>
-			<td>Rest</td>
-		</tr>
-
-		<tr>
-			<td>Seated Calf Raise</td>
-			<td>Overhead Cable Tricep Extension</td>
-			<td>Face Pulls</td>
-			<td>Seated Calf Raise</td>
-			<td>Overhead Cable Tricep Extension</td>
-			<td>Face Pulls</td>
-			<td>Rest</td>
-		</tr>
-
-		<tr>
-			<td>Rest</td>
-			<td>Rest</td>
-			<td>Dumbbell Curls</td>
-			<td>*Ab Workout of Your Choosing*</td>
-			<td>Rest</td>
-			<td>Dumbbell Curls</td>
-			<td>Rest</td>
-		</tr>
+	</tbody>
 	</table>
 </body>
 </html>
+
