weekly rout pt2
almost done!

--- a/html/routines.html
+++ b/html/routines.html
@@ -20,31 +20,31 @@
 	</header>
 
 	<h1>Choose Your Split</h1><br>
-	<h2 class="paragraph">Feel free to choose between our 3 day, 4 day, or 6 day workout routine splits</h2>
+	<p class="intro">Feel free to choose between our 3 day, 4 day, or 6 day workout routine splits</p>
 
-	<p class="paragraph">3-Day Split</p>
-	<table class="content">
+	<p class="split">3-Day Split</p>
+	<table class="content-table">
 		<thead>
-		<tr>
-			<th>Monday</th>
-			<th>Tuesday</th>
-			<th>Wednesday</th>
-			<th>Thursday</th>
-			<th>Friday</th>
-			<th>Saturday</th>
-			<th>Sunday</th>
-		</tr>
+			<tr>
+				<th>Monday</th>
+				<th>Tuesday</th>
+				<th>Wednesday</th>
+				<th>Thursday</th>
+				<th>Friday</th>
+				<th>Saturday</th>
+				<th>Sunday</th>
+			</tr>
 		</thead>
 		<tbody>
-		<tr>
-			<td>Squat</td>
-			<td>Rest</td>
-			<td>Squat</td>
-			<td>Rest</td>
-			<td>Squat</td>
-			<td>Rest</td>
-			<td>Rest</td>
-		</tr>
+			<tr>
+				<td>Squat</td>
+				<td>Rest</td>
+				<td>Squat</td>
+				<td>Rest</td>
+				<td>Squat</td>
+				<td>Rest</td>
+				<td>Rest</td>
+			</tr>
 		<tr>
 			<td>Deadlift</td>
 			<td>Rest</td>
