--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness</title>
 	<link rel="stylesheet" href="css/css_index.css"/>
+	<script data-ad-client="ca-pub-9383732555238741" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
